--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <input id="target-month-input" size="5" /> -
     <input id="target-date-input" size="5" />
   </div>
-  <button onclick="countMaker()" class="start-btn">카운트다운 시작</button>
+  <button onclick="starter()" class="btn">카운트다운 시작</button>
+  <button onclick="setClearInterval()" class="btn">타이머 초기화</button>
 </body>
 </html>
